Fix text alignment issues in landing page on smartphones

--- a/ui/css/oae.index.css
+++ b/ui/css/oae.index.css
@@ -124,7 +124,24 @@
 }
 
 @media (max-width: 480px) {
+    #index-container #index-content {
+        text-align: center;
+    }
+    #index-container #index-video-container {
+        padding: 0;
+    }
     #index-container #index-slogan {
         font-size: 34px;
+        line-height: 1.1em;
+    }
+    #index-container #index-slogan-description {
+        font-size: 16px;
+        padding: 0 5px;
+    }
+    #index-container .index-bottom i {
+        display: block;
+        font-size: 40px;
+        line-height: 1.2em;
+        width: 100%;
     }
 }
